<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_column="2"
    android:layout_row="2"
    android:padding="5dp">

    <LinearLayout
        android:paddingTop="5dp"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#636060"
            android:text="@string/music_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/music_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:textColor="#aeacab"
            android:textAlignment="viewEnd"
            android:id="@+id/textView5" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:textColor="#aeacab"
            android:text="@string/music_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" />
    </LinearLayout>
</LinearLayout>